<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">


        <TextView
            android:id="@+id/textView9"
            style="@style/SmallHeadingDarkBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="1."
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            style="@style/SmallHeadingDarkBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/timer"
            android:textAllCaps="false"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/empty_pic"
            app:layout_constraintStart_toStartOf="@+id/empty_pic"
            app:layout_constraintTop_toBottomOf="@+id/empty_pic" />

        <TextView
            android:id="@+id/textView18"
            style="@style/SmallHeadingDarkBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/destination"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView12"
            style="@style/SmallHeadingDarkBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/previous_no"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/to"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/bid_no_text"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView17"
            style="@style/SmallHeadingDarkBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/starting_location"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView7"
            style="@style/SmallHeadingDarkBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="PB30XXXXX"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            style="@style/SmallHeadingDarkBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/from"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/date_title"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="180dp"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/accepted"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="fitXY"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tick_dark" />

        <ImageView
            android:id="@+id/rejected"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="fitXY"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cross_dark" />

        <ImageView
            android:id="@+id/empty_pic"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="fitXY"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>